# snake

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
src/: bait.py  constants.py  game.py  snake.py  utils.py
