[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "shd-snake"
version = "0.0.2"
authors = [
  { name="StrawHatDragon", email="author@example.com" },
]
description = "A simple snake game"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/StrawHatDrag0n/snake"
"Bug Tracker" = "https://github.com/StrawHatDrag0n/snake/issues"
